setting up new style

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <h1>[StayKimanii]</h1>
+        <h1>[Welcome to Hoodlum's INCORPORATED]</h1>
 
         <!-- About Me -->
             <h2> About Me </h2>
@@ -55,7 +55,7 @@
         <!--Discord-->
         <section class="project">
             <a href="https://discord.gg/deHKhw3M">
-                <h3>--Storyboard</h3>
+                <h3>--Join the Discord--</h3>
             </a>
             <a href="https://discord.gg/deHKhw3M">
                 <img src="images/Discord.png">
