--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <h1>[Welcome to Hoodlum's INCORPORATED]</h1>
+        <h1>Welcome to Hoodlum's INCORPORATED</h1>
 
         <!-- About Me -->
             <h2> About Me </h2>
