--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <h1>Welcome to Hoodlum's INCORPORATED</h1>
+        <h1>[Welcome to Hoodlum's INCORPORATED</h1>
 
         <!-- About Me -->
             <h2> About Me </h2>
@@ -15,13 +15,6 @@
             </div>   
         </div>
 
-        <h2>Skills</h2>
-        <div class="skills">
-
-        </div>
-
-        <h2>Highlighted projects</h2>
-        <div class="projects">  
         <!-- Instagram  -->
             <section class="project">
                 <a href="https://www.instagram.com/staykimanii/">
