--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <h2> About Me </h2>
                 <div class="about">
                     <img src="images/staykimani pfp.PNG">
-                <p>YOOOOO, YOU FOUND THE SITE. Welcolme to Hoodlum's INCORPORATED! I'm the captain of this crew, staykimani. Pick which squad you want to be a part of! </p>
+                <p>YOOOOO, YOU FOUND THE SITE. Welcome to Hoodlum's INCORPORATED! I'm the captain of this crew, staykimani. Follow along the other sites and let's see how this story continues! </p>
             </div>   
         </div>
 
